--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fast-fuzzy": "^1.12.0",
+    "flexsearch": "^0.8.205",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.2",
