impl lxns OAuth, separate setting datasource card
other:env config file update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "songcollections",
   "private": true,
-  "version": "0.1.1",
+  "version": "0.1.2-oauth-test",
   "type": "module",
   "scripts": {
     "dev": "vite",
