--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.3",
     "shadcn-vue": "1.0.3",
     "tailwindcss": "3.4.11",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
     "vite-node": "^3.2.4",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^2.2.10"
   }
 }
