--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
-  "recommendations": ["Vue.volar"],
+  "recommendations": [
+    "Vue.volar",
+    "Webnative.webnative"
+  ],
   "files.associations": {
     "*.css": "tailwindcss"
   },
