--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "songcollections",
   "private": true,
-  "version": "0.1.2-oauth-test",
+  "version": "0.1-android",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@vueuse/components": "^13.5.0",
     "@vueuse/core": "^13.5.0",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +31,7 @@
     "wanakana": "^5.3.1"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.2",
     "@types/node": "^24.0.10",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
