--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.4.2",
+    "@capacitor/clipboard": "^7.0.2",
     "@capacitor/core": "^7.4.2",
     "@vueuse/components": "^13.5.0",
     "@vueuse/core": "^13.5.0",
@@ -31,6 +32,7 @@
     "wanakana": "^5.3.1"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.4.2",
     "@types/node": "^24.0.10",
     "@vitejs/plugin-vue": "^6.0.0",
