--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "check": "vue-tsc -b",
     "build": "vue-tsc -b && vite build",
     "build-fast": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-android": "vite build && npx cap sync --inline"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.2",
     "@capacitor/clipboard": "^7.0.2",
     "@capacitor/core": "^7.4.2",
+    "@material/web": "^2.3.0",
     "@vueuse/components": "^13.5.0",
     "@vueuse/core": "^13.5.0",
     "class-variance-authority": "^0.7.1",
