--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flexsearch": "^0.8.205",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
+    "pinyin-pro": "^3.27.0",
     "reka-ui": "^2.4.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
