--- a/.env_example
+++ b/.env_example
@@ -2,3 +2,6 @@ VITE_API_BASE_URL=http://localhost:3000
 VITE_PROJECT_VERSION=0.1.2-oauth-test
 ## go https://maimai.lxns.net/developer to apply
 VITE_LXNS_OAUTH_URI=
+VITE_LXNS_OAUTH_APP_ID=
+VITE_LXNS_OAUTH_APP_SECRET=
+VITE_LXNS_OAUTH_APP_REDIRECT_URI=
