--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "songcollections",
   "private": true,
-  "version": "0.0.3-android",
+  "version": "0.0.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
